Worked on number button functions, making sure numbers print to the display area.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <h1>Calculator</h1>
     <div class="container">
       <div class="display">
+        <!-- <div class="display"></div> -->
         <textarea name="display" id="display"></textarea>
       </div>
       <div class="btn-cntnr">
         <div class="btn-line-one">
-          <button class="btn clear">AC</button>
+          <button class="clear">AC</button>
           <button class="btn operator">+/-</button>
           <button class="btn operator">%</button>
           <button class="btn operator">/</button>
