--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
       <div class="btn-cntnr">
         <div class="btn-line-one">
           <button class="clear">AC</button>
-          <button class="btn operator">+/-</button>
-          <button class="btn operator">%</button>
-          <button class="btn operator">/</button>
+          <button class="operator">+/-</button>
+          <button class="operator">%</button>
+          <button class="operator">/</button>
         </div>
         <div class="btn-line-two">
           <button class="btn number">7</button>
           <button class="btn number">8</button>
           <button class="btn number">9</button>
-          <button class="btn operator">X</button>
+          <button class="operator">X</button>
         </div>
         <div class="btn-line-three">
           <button class="btn number">4</button>
           <button class="btn number">5</button>
           <button class="btn number">6</button>
-          <button class="btn operator">-</button>
+          <button class="operator">-</button>
         </div>
         <div class="btn-line-four">
           <button class="btn number">1</button>
           <button class="btn number">2</button>
           <button class="btn number">3</button>
-          <button class="btn operator">+</button>
+          <button class="operator">+</button>
         </div>
         <div class="btn-line-five">
           <button class="btn zero number">0</button>
-          <button class="btn operator">.</button>
-          <button class="btn operator">=</button>
+          <button class="operator">.</button>
+          <button class="operator">=</button>
         </div>
       </div>
     </div>
