--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
           <button class="operator">/</button>
         </div>
         <div class="btn-line-two">
-          <button class="btn number">7</button>
-          <button class="btn number">8</button>
-          <button class="btn number">9</button>
-          <button class="operator">X</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="operator">x</button>
         </div>
         <div class="btn-line-three">
-          <button class="btn number">4</button>
-          <button class="btn number">5</button>
-          <button class="btn number">6</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
           <button class="operator">-</button>
         </div>
         <div class="btn-line-four">
-          <button class="btn number">1</button>
-          <button class="btn number">2</button>
-          <button class="btn number">3</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
           <button class="operator">+</button>
         </div>
         <div class="btn-line-five">
-          <button class="btn zero number">0</button>
-          <button class="operator">.</button>
-          <button class="operator">=</button>
+          <button class="zero number">0</button>
+          <button class="decimal">.</button>
+          <button class="equal">=</button>
         </div>
       </div>
     </div>
