--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/5099dce4b2.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Odin-Calculator</title>
   </head>
   <body>
@@ -16,7 +20,7 @@
       <div class="btn-cntnr">
         <div class="btn-line-one">
           <button class="clear">AC</button>
-          <button class="operator">+/-</button>
+          <button class="backspace"><i class="fa-solid fa-delete-left"></i></button>
           <button class="operator">%</button>
           <button class="operator">/</button>
         </div>
